2002-06-04  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/generic/ldconfig.h (FLAG_POWERPC_LIB64) New macro.
	* elf/cache.c (print_entry): Add case for FLAG_POWERPC_LIB64.
	Remove per-machine conditionals for FLAG_* cases.
	* sysdeps/unix/sysv/linux/powerpc/ldconfig.h: New file.
	* sysdeps/unix/sysv/linux/powerpc/readelflib.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/dl-cache.h: New file.

2002-09-10  Alan Modra <amodra@bigpond.net.au>

	* csu/gmon-start.c [!TEXT_START]: Define TEXT_START if not already
	defined in entry.h.
	(__gmon_start__) [!ENTRY_POINT_DECL]: Use TEXT_START macro to obtain
	lowest address for profiling in  __monstartup call.
	* sysdeps/powerpc/powerpc64/elf/entry.h: New file.

2002-09-14  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/pread.c: __NR_pread64 may be defined
	instead of __NR_pread.
	* sysdeps/unix/sysv/linux/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/pwrite.c: __NR_pwrite64 may be defined
	instead of __NR_pwrite.
	* sysdeps/unix/sysv/linux/pwrite64.c: Likewise.

2002-09-13  Roland McGrath  <roland@redhat.com>

	* manual/libc.texinfo: @ifinfo -> @ifnottex around copyright notice.

2002-09-13  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Add readahead
	syscall.  Patch by Guido Guenther <agx@sigxcpu.org>.

2002-09-12  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h: Correct DT_LOOS and DT_HIOS values.

2002-09-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/fpu/s_isnan.c: #undef __isnanf and isnanf after
	reading the headers.

2002-09-12  Roland McGrath  <roland@redhat.com>

	* elf/rtld.c (_dl_start_final): Move _begin, _end decls outside the fn.
	(_dl_start) [DONT_USE_BOOTSTRAP_MAP]: Use &_begin instead of l_addr to
	find the ELF header.

	* elf/rtld.c (dl_main) [USE_TLS]: Adjust l_tls_initimage of main
	executable if needed, in case it's actually a shared object.

2002-09-11  Roland McGrath  <roland@redhat.com>
